# Distributed-Learning-Cluster

cs425-mp1-main/: Makefile  README.md
cs425-mp1-main/expected_results/: test6_expected.txt
cs425-mp1-main/src/: client.cc
cs425-mp2-main/: Makefile  README.md  ip.config
cs425-mp2-main/src/distributed_grep/: grep_client.cc
cs425-mp2-main/src/distributed_membership/: membership_server.cc
cs425-mp3-main/: Makefile  README.md
cs425-mp3-main/src/distributed_grep/: grep_server.cc
cs425-mp3-main/src/distributed_grep/expected_results/: test3_expected.txt  test5_expected.txt
cs425-mp3-main/src/sdfs/: sdfs_server.cc
cs425-mp4-main/: CMakeLists.txt  README.md  dns.config
cs425-mp4-main/src/distributed_grep/expected_results/: test1_expected.txt  test2_expected.txt  test4_expected.txt
cs425-mp4-main/src/idunno/: idunno_server.cc
cs425-mp4-main/src/tensorflow/: label_image.cc  label_image.h  multibox_detector.cc  multibox_detector.h
